[package]
name = "cspotv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.217", features = ["derive"] }
spotify-rs = "0.3.14"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
